# FileObfuscator

./: LICENSE  Readme.md  helper.py  main.py  obfuscator.py  pyproject.toml
src/fileobfuscator/: main.py  obfuscator.py
src/fileobfuscator/Ciphers/: Cipher.py  DEC.py  HEX.py  ROT13.py  __init__.py
src/fileobfuscator/Exceptions/: InvalidFileNameException.py
tests/: TestArgparseArguments.py  TestFileRenaming.py
